@@ -1,5 +1,7 @@
 2000-08-13  Dan Winship  <danw@helixcode.com>
 
+	* mail-format.c (add_url): Fix some freed-memory references
+
 	* mail-threads.c (get_password): Don't free the prompt. It
 	doesn't belong to you.
 
